--- a/src/MeetingPlanner.Console/MeetingPlanner.Console.csproj
+++ b/src/MeetingPlanner.Console/MeetingPlanner.Console.csproj
@@ -7,4 +7,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="ScheduleAnalyzerService" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="ScheduleAnalyzerService" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
