--- a/src/MeetingPlanner.Console/MeetingPlanner.Console.csproj
+++ b/src/MeetingPlanner.Console/MeetingPlanner.Console.csproj
@@ -8,15 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="ScheduleAnalyzerService" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="ScheduleAnalyzerService" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
