Added unit tests

--- a/src/MeetingPlanner.Console/appsettings.json
+++ b/src/MeetingPlanner.Console/appsettings.json
@@ -1,3 +1,13 @@
 {
-    "ScheduleUrl": "https://rndfiles.blob.core.windows.net/pizzacabininc/2015-12-14.json"
+  "MeetingSchedulerOptions": {
+    "ScheduleUrl": "https://rndfiles.blob.core.windows.net/pizzacabininc/2015-12-14.json",
+    "WorkDayStartTime": "09:00 AM"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "None",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  }
 }
