--- a/src/MeetingPlanner.Console/appsettings.json
+++ b/src/MeetingPlanner.Console/appsettings.json
@@ -6,8 +6,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "None",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "None",
+      "Microsoft.Hosting.Lifetime": "None"
     }
   }
 }
